--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/mongoose": "^5.5.6",
     "@types/node": "^12.0.10",
     "class-validator": "^0.9.1",
+    "mongoose": "^5.6.0",
+    "reflect-metadata": "^0.1.13",
     "tslint": "^5.18.0",
     "typescript": "^3.5.2"
   }
