--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/mongoose": "^5.5.6",
     "@types/node": "^12.0.10",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "mongoose": "^5.6.0",
     "reflect-metadata": "^0.1.13",
