--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "class-validator": "^0.9.1",
     "mongoose": "^5.6.0",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
     "typescript": "^3.5.2"
   }
