--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.0",
     "@types/mongoose": "^5.5.6",
     "@types/node": "^12.0.10",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
+    "express": "^4.17.1",
     "mongoose": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.3.0",
