--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,18 @@
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.1.1",
+    "antd": "^3.20.0",
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.19.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.5.2"
   },
   "scripts": {
@@ -39,6 +44,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^5.0.2",
+    "@types/react-router-dom": "^4.3.4",
+    "redux-devtools-extension": "^2.13.8",
     "tslint": "^5.18.0"
   }
 }
